changed raleway link, fixed part of nav, still need to center align title and vertical align everything

--- a/style.css
+++ b/style.css
@@ -8,8 +8,20 @@ body {
   width: 100vw;
 }
 
-#nav-items{
+#site-title {
+  align: center;
+  vertical-align: center;
+  font-family: Raleway;
+  font-weight: black;
+  color: blue;
+}
 
+
+#nav-items{
+  font-family: Raleway;
+  float: right;
+  margin-left: 6em;
+  margin-right: 6em;
 }
 
 header {
@@ -66,7 +78,6 @@ h1 {
     color: blue;
     background-color: yellow;
     font-size: 4em;
-    font-weight: bold;
     /*padding-top: 4em;*/
     margin-left: 20%;
     margin-right:20%;
@@ -77,7 +88,6 @@ h2 {
     font-family: Raleway;
     color: blue;
     height: 3em;
-    font-weight: bold;
     margin-bottom: 2em;
 }
 
@@ -85,7 +95,6 @@ h3 {
     font-family: Raleway;
     color: blue;
     height: 2em;
-    font-weight: bold;
     margin-bottom: 1em;
 }
 
